 +Fix broken case-sensitive search.
 +Fixed bug 111, unlock a mutext not locked. 
 +Fixed history editing problem issue where history is updated while editing.
 +Added emphatic statement about xdotool on the autopaste tooltip.
 +Added pref_mapper that maps prefs to integer values so we don't have to string compares
  in main loop. Should decrease CPU cycles considerably in the ticker.
 
V1.1.7 Tuesday, October 15, 2013
 +Added remote i386 build and upload to sourceforge.
 +Fixed bug 100, pot doesn't contain <b> entries
 +Updated French translation.
 +Fixed duplicate empty string which causes errors in translations.
 +Final fix for bug 81.
 +Fix Duplicate Edit box when editing keyboard history entries (reported in bug 103 as sidenote).
 +Added Right-click edit option, to directly edit any history item, without it being current selection.
 +Fixed bug 102/feature request 49, low resolution icon.
 +Fixed history containing 0 length items.
 +Added ability to right-click edit each menu item (rather than Alt-E).
 +Fix part 1 of bug 104, Right-click edit with 0 len text results in blank entries on clip.
 +Fix part 2 of bug 104, crashing with right-click edit blank entries.
 +Changed append_item so it is not de-allocating/reallocating memory, instead just repositions entry in list.
 +Fixed two or more action keys having the same key.
 +Fix bug 105, failure to build with libappindicator.

V1.1.6 Thursday, August 1 2013
 +Fixed Bug #99, Broken CLI functionality. Now looks at XDG_SESSION_COOKIE, XDG_SEAT, and DISPLAY, introduced by multi-user fix.
 +Fixed bug where if fifo are not found in client mode, parcellite segfaults.
 +Apply patch for typo in German translation, patch #30.
 +Updated parcellite.pot (./extract_strings.sh).
 +Changed name of history file from hist.test to history (debug escape). To restore the history, Quit Parcellite, then cd to $HOME/.local/share/parcellite:   mv hist.test history